--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,6 @@ dependencies:
   chrome: any
   dart_web_toolkit: any
   hetima:
-    git: https://github.com/kyorohiro/dart_hetimalib.git
+    path: /Users/kiyohiro/dart/git/dart_hetimalib
 transformers:
 - chrome
