--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "HetimaPortMapper",
-  "version": "0.80",
+  "name": "HetimaPortMap",
+  "version": "0.81",
   
   "manifest_version": 2,
   
