--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,9 +6,9 @@ dependencies:
   chrome: any
   dart_web_toolkit: any
   hetimacore:
-    git: https://github.com/kyorohiro/dart_hetimacore.git
+    git: https://github.com/kyorohiro/dart_hetimacore
   hetimanet:
-    git: https://github.com/kyorohiro/dart_hetimanet.git
+    git: https://github.com/kyorohiro/dart_hetimanet
 transformers:
 - chrome
 - $dart2js:
