--- a/proj_hetimaportmap/pubspec.yaml
+++ b/proj_hetimaportmap/pubspec.yaml
@@ -4,8 +4,7 @@ author: kyorohiro
 description: port map chrome app
 dependencies:
   chrome: any
-  dart_web_toolkit:
-    path: /Users/kiyohiro/dart/git/ot/dart_web_toolkit
+  dart_web_toolkit: any
   hetimacore:
     git: https://github.com/kyorohiro/dart_hetimacore
   hetimanet:
