--- a/proj_hetimaportmap/.settings/org.eclipse.core.resources.prefs
+++ b/proj_hetimaportmap/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,4 @@ encoding//packages/dart_web_toolkit/resource/dark/dark_rtl.css=UTF-8
 encoding//web/app.css=UTF-8
 encoding//web/dark/dark.css=UTF-8
 encoding//web/dark/dark_rtl.css=UTF-8
+encoding/<project>=UTF-8
