--- a/proj_hetimaportmap/pubspec.yaml
+++ b/proj_hetimaportmap/pubspec.yaml
@@ -6,9 +6,9 @@ dependencies:
   chrome: any
   dart_web_toolkit: any
   hetimacore:
-    git: https://github.com/kyorohiro/dart_hetimacore
+    git: https://github.com/kyorohiro/dart_hetimacore.git
   hetimanet:
-    path: /Users/kiyohiro/dart/git/dart_hetimanet
+    git: https://github.com/kyorohiro/dart_hetimanet.git
 transformers:
 - chrome
 - $dart2js:
